fix(client): align Modal content vertically flex column

--- a/client/src/components/modal/Modal.module.scss
+++ b/client/src/components/modal/Modal.module.scss
@@ -9,6 +9,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   z-index: 1000;
   cursor: pointer;
 }
